--- a/PUBLIC/other-pages/weeks/style.css
+++ b/PUBLIC/other-pages/weeks/style.css
@@ -1,7 +1,5 @@
-
-
-body{
-    background-color: #f6f6f6;
+body {
+  background-color: #f6f6f6;
   line-height: 1.6;
   font-size: 16px;
 
@@ -14,53 +12,57 @@ body{
 
 
 .btn {
-	display: grid;
-border:1px solid black;
-	font-size: 14px;
-	letter-spacing: 0px;
-	font-weight: 700;
-	line-height: 16px;
-	text-decoration: none !important;
-	text-transform: uppercase;
-	background-color: #fff;
-	background: #4234f8;
-	color: black !important;
-	border: none;
-	border-radius: 2px;
-	cursor: pointer;
-	justify-content: center;
-	padding: 16px 28px;
-	height: 48px;
-	text-align: center;
-	white-space: normal;
-}
-.btn:active {
-	outline: 0;
-}
-.btn::before {
-	border-radius: 2px;
+  display: grid;
+  border: 1px solid black;
+  font-size: 14px;
+  letter-spacing: 0px;
+  font-weight: 700;
+  line-height: 16px;
+  text-decoration: none !important;
+  text-transform: uppercase;
+  border-radius: 8px;
+  background: lightgrey;
+  color: black !important;
+  border-radius: 2px;
+  cursor: pointer;
+  justify-content: center;
+  padding: 12px 15px;
+  height: 48px;
+  text-align: center;
+  white-space: normal;
+  margin: auto;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-#home-link2{
-  margin:auto;
-    background-color: rgba(0, 102, 255, 0.248);
+.btn:active {
+  outline: 0;
+}
+
+.btn::before {
+  border-radius: 2px;
+}
+
+#home-link2 {
+  margin: auto;
+  background-color: rgba(0, 102, 255, 0.248);
   color: white;
-  padding:0.3em 0.3em;
+  padding: 0.3em 0.3em;
   text-decoration: none;
   text-transform: uppercase;
 }
 
-img{
-    display: block;
+img {
+  display: block;
   margin-left: auto;
   margin-right: auto;
-height:1em;
-width:1em;
+  height: 250px;
+  width: 250px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
+
 .section {
   background-color: black;
-  border-radius: 1
-  c;
+  border-radius: 1 c;
   width: 90%;
   margin: auto;
   padding: 10px;
@@ -70,7 +72,7 @@ width:1em;
 }
 
 .sub-section {
- background-color: #f2b379;
+  background-color: #f2b379;
   border-radius: 1pc;
   width: 85%;
   margin: auto;
@@ -82,7 +84,7 @@ width:1em;
 }
 
 .inner-sub-section {
-  background-color: 🧮 ;
+  background-color: 🧮;
   border-radius: 1pc;
   width: 90%;
   margin: auto;
@@ -108,7 +110,7 @@ h1 {
   text-align: center;
   font-size: 500%;
   background-color: white;
-  background-color: transparent ;
+  background-color: transparent;
   border-radius: 1pc;
   width: 90%;
   margin: auto;
@@ -121,7 +123,7 @@ h1 {
 h2 {
   text-align: center;
   font-size: 250%;
-  background-color: #f7d7a6 ;
+  background-color: #f7d7a6;
   border-radius: 1pc;
   width: 85%;
   margin: auto;
@@ -164,7 +166,7 @@ li {
 }
 
 p {
-    border: dashed;
+  border: dashed;
   border-width: 2px 4px;
   border-radius: 40px;
   background-color: white;
@@ -177,9 +179,12 @@ p {
   margin-bottom: 20px;
   text-align: center;
 }
+
 #lo-9-container {
-      display:flex; flex-direction:column; justify-content:center;
-  min-height:100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
   margin: auto;
   background-color: rgba(93, 107, 143, 0.112);
   border: 1px solid rgba(65, 56, 56, 0.851);
@@ -208,17 +213,30 @@ p {
   -ms-border-radius: 1rem;
   -o-border-radius: 1rem;
 }
+
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 50%;
 }
+
 a {
-  background-color: red;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 132, 0, 0.502);
   color: white;
-  padding: 0.3em 0.3em;
+  padding: 0.2em 0.2em;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-right: 20px;
+  margin-left: 20px;
   text-decoration: none;
   text-transform: uppercase;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
 }
 
 a:hover {
@@ -232,6 +250,7 @@ a:active {
 a:visited {
   background-color: #ccc;
 }
+
 td,
 th {
   border: 1px solid #dddddd;
@@ -241,8 +260,7 @@ th {
 
 .container {
   background-color: black;
-  border-radius: 1
-  c;
+  border-radius: 1 c;
   width: 90%;
   margin: auto;
   padding: 10px;
@@ -288,17 +306,19 @@ code pre {
   -ms-border-radius: 3pc;
   -o-border-radius: 3pc;
 }
+
 code {
-  color:black;
-  margin:left;
-  background-color:white;
+  color: black;
+  margin: left;
+  background-color: white;
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
 }
-#quiz{
+
+#quiz {
 
   border-radius: 1pc;
   width: 90%;
@@ -342,14 +362,16 @@ pre[class*="language-"] {
 }
 
 pre[class*="language-"],
-:not(pre) > code[class*="language-"] {
-  background: hsl(0, 0%, 8%); /* #141414 */
+:not(pre)>code[class*="language-"] {
+  background: hsl(0, 0%, 8%);
+  /* #141414 */
 }
 
 /* Code blocks */
 pre[class*="language-"] {
   border-radius: 0.5em;
-  border: 0.3em solid hsl(0, 0%, 60%); /* #282A2B */
+  border: 0.3em solid hsl(0, 0%, 60%);
+  /* #282A2B */
   box-shadow: 1px 1px 0.5em black;
   margin: 0.5em 0;
   overflow: auto;
@@ -358,12 +380,14 @@ pre[class*="language-"] {
 
 pre[class*="language-"]::-moz-selection {
   /* Firefox */
-  background: hsl(200, 4%, 16%); /* #282A2B */
+  background: hsl(200, 4%, 16%);
+  /* #282A2B */
 }
 
 pre[class*="language-"]::selection {
   /* Safari */
-  background: hsl(200, 4%, 16%); /* #282A2B */
+  background: hsl(200, 4%, 16%);
+  /* #282A2B */
 }
 
 /* Text Selection colour */
@@ -372,7 +396,8 @@ pre[class*="language-"] ::-moz-selection,
 code[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection {
   text-shadow: none;
-  background: hsla(0, 0%, 93%, 0.15); /* #EDEDED */
+  background: hsla(0, 0%, 93%, 0.15);
+  /* #EDEDED */
 }
 
 pre[class*="language-"]::selection,
@@ -380,13 +405,15 @@ pre[class*="language-"] ::selection,
 code[class*="language-"]::selection,
 code[class*="language-"] ::selection {
   text-shadow: none;
-  background: hsla(0, 0%, 93%, 0.15); /* #EDEDED */
+  background: hsla(0, 0%, 93%, 0.15);
+  /* #EDEDED */
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+:not(pre)>code[class*="language-"] {
   border-radius: 0.3em;
-  border: 0.13em solid hsl(0, 0%, 33%); /* #545454 */
+  border: 0.13em solid hsl(0, 0%, 33%);
+  /* #545454 */
   box-shadow: 1px 1px 0.3em -0.1em black inset;
   padding: 0.15em 0.2em 0.05em;
   white-space: normal;
@@ -396,7 +423,8 @@ code[class*="language-"] ::selection {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: hsl(0, 0%, 47%); /* #777777 */
+  color: hsl(0, 0%, 47%);
+  /* #777777 */
 }
 
 .token.punctuation {
@@ -411,7 +439,8 @@ code[class*="language-"] ::selection {
 .token.boolean,
 .token.number,
 .token.deleted {
-  color: hsl(14, 58%, 55%); /* #CF6A4C */
+  color: hsl(14, 58%, 55%);
+  /* #CF6A4C */
 }
 
 .token.keyword,
@@ -420,7 +449,8 @@ code[class*="language-"] ::selection {
 .token.constant,
 .token.symbol,
 .token.builtin {
-  color: hsl(53, 89%, 79%); /* #F9EE98 */
+  color: hsl(53, 89%, 79%);
+  /* #F9EE98 */
 }
 
 .token.attr-name,
@@ -434,22 +464,26 @@ code[class*="language-"] ::selection {
 .style .token.string,
 .token.variable,
 .token.inserted {
-  color: hsl(76, 21%, 52%); /* #8F9D6A */
+  color: hsl(76, 21%, 52%);
+  /* #8F9D6A */
 }
 
 .token.atrule {
-  color: hsl(218, 22%, 55%); /* #7587A6 */
+  color: hsl(218, 22%, 55%);
+  /* #7587A6 */
 }
 
 .token.regex,
 .token.important {
-  color: hsl(42, 75%, 65%); /* #E9C062 */
+  color: hsl(42, 75%, 65%);
+  /* #E9C062 */
 }
 
 .token.important,
 .token.bold {
   font-weight: bold;
 }
+
 .token.italic {
   font-style: italic;
 }
@@ -467,7 +501,8 @@ pre[data-line] {
 .language-markup .token.tag,
 .language-markup .token.attr-name,
 .language-markup .token.punctuation {
-  color: hsl(33, 33%, 52%); /* #AC885B */
+  color: hsl(33, 33%, 52%);
+  /* #AC885B */
 }
 
 /* Make the tokens sit above the line highlight so the colours don't look faded. */
@@ -477,17 +512,20 @@ pre[data-line] {
 }
 
 .line-highlight {
-  background: hsla(0, 0%, 33%, 0.25); /* #545454 */
-  background: linear-gradient(
-    to right,
-    hsla(0, 0%, 33%, 0.1) 70%,
-    hsla(0, 0%, 33%, 0)
-  ); /* #545454 */
-  border-bottom: 1px dashed hsl(0, 0%, 33%); /* #545454 */
-  border-top: 1px dashed hsl(0, 0%, 33%); /* #545454 */
+  background: hsla(0, 0%, 33%, 0.25);
+  /* #545454 */
+  background: linear-gradient(to right,
+      hsla(0, 0%, 33%, 0.1) 70%,
+      hsla(0, 0%, 33%, 0));
+  /* #545454 */
+  border-bottom: 1px dashed hsl(0, 0%, 33%);
+  /* #545454 */
+  border-top: 1px dashed hsl(0, 0%, 33%);
+  /* #545454 */
   left: 0;
   line-height: inherit;
-  margin-top: 0.75em; /* Same as .prism’s padding-top */
+  margin-top: 0.75em;
+  /* Same as .prism’s padding-top */
   padding: inherit 0;
   pointer-events: none;
   position: absolute;
@@ -498,10 +536,12 @@ pre[data-line] {
 
 .line-highlight:before,
 .line-highlight[data-end]:after {
-  background-color: hsl(215, 15%, 59%); /* #8794A6 */
+  background-color: hsl(215, 15%, 59%);
+  /* #8794A6 */
   border-radius: 999px;
   box-shadow: 0 1px white;
-  color: hsl(24, 20%, 95%); /* #F5F2F0 */
+  color: hsl(24, 20%, 95%);
+  /* #F5F2F0 */
   content: attr(data-start);
   font: bold 65%/1.5 sans-serif;
   left: 0.6em;
@@ -530,23 +570,24 @@ pre[data-line] {
   left: 0;
   right: 0;
   padding: inherit 0;
-  margin-top: 1em; /* Same as .prism’s padding-top */
+  margin-top: 1em;
+  /* Same as .prism’s padding-top */
 
   background: hsla(24, 20%, 50%, 0.08);
-  background: linear-gradient(
-    to right,
-    hsla(24, 20%, 50%, 0.1) 70%,
-    hsla(24, 20%, 50%, 0)
-  );
+  background: linear-gradient(to right,
+      hsla(24, 20%, 50%, 0.1) 70%,
+      hsla(24, 20%, 50%, 0));
 
   pointer-events: none;
 
   line-height: inherit;
   white-space: pre;
 }
-#home-link2{
-  margin:auto;
+
+#home-link2 {
+  margin: auto;
 }
+
 .line-highlight:before,
 .line-highlight[data-end]:after {
   content: attr(data-start);
@@ -579,9 +620,11 @@ pre[data-line] {
 pre[id].linkable-line-numbers span.line-numbers-rows {
   pointer-events: all;
 }
-pre[id].linkable-line-numbers span.line-numbers-rows > span:before {
+
+pre[id].linkable-line-numbers span.line-numbers-rows>span:before {
   cursor: pointer;
 }
+
 /* pre[id].linkable-line-numbers span.line-numbers-rows > span:hover:before {
   background-color: rgba(128, 128, 128, 0.2);
 } */
@@ -590,7 +633,7 @@ div.code-toolbar {
   position: relative;
 }
 
-div.code-toolbar > .toolbar {
+div.code-toolbar>.toolbar {
   position: absolute;
   top: 0.3em;
   right: 0.2em;
@@ -598,25 +641,25 @@ div.code-toolbar > .toolbar {
   opacity: 0;
 }
 
-div.code-toolbar:hover > .toolbar {
+div.code-toolbar:hover>.toolbar {
   opacity: 1;
 }
 
 /* Separate line b/c rules are thrown out if selector is invalid.
    IE11 and old Edge versions don't support :focus-within. */
-div.code-toolbar:focus-within > .toolbar {
+div.code-toolbar:focus-within>.toolbar {
   opacity: 1;
 }
 
-div.code-toolbar > .toolbar .toolbar-item {
+div.code-toolbar>.toolbar .toolbar-item {
   display: inline-block;
 }
 
-div.code-toolbar > .toolbar a {
+div.code-toolbar>.toolbar a {
   cursor: pointer;
 }
 
-div.code-toolbar > .toolbar button {
+div.code-toolbar>.toolbar button {
   background: none;
   border: 0;
   color: inherit;
@@ -624,14 +667,15 @@ div.code-toolbar > .toolbar button {
   line-height: normal;
   overflow: visible;
   padding: 0;
-  -webkit-user-select: none; /* for button */
+  -webkit-user-select: none;
+  /* for button */
   -moz-user-select: none;
   -ms-user-select: none;
 }
 
-div.code-toolbar > .toolbar a,
-div.code-toolbar > .toolbar button,
-div.code-toolbar > .toolbar span {
+div.code-toolbar>.toolbar a,
+div.code-toolbar>.toolbar button,
+div.code-toolbar>.toolbar span {
 
   font-size: 0.8em;
   padding: 0 0.5em;
@@ -640,23 +684,25 @@ div.code-toolbar > .toolbar span {
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
   border-radius: 0.5em;
 }
+
 .section-button {
-  display:inline;
+  display: inline;
 }
-div.code-toolbar > .toolbar a:hover,
-div.code-toolbar > .toolbar a:focus,
-div.code-toolbar > .toolbar button:hover,
-div.code-toolbar > .toolbar button:focus,
-div.code-toolbar > .toolbar span:hover,
-div.code-toolbar > .toolbar span:focus {
+
+div.code-toolbar>.toolbar a:hover,
+div.code-toolbar>.toolbar a:focus,
+div.code-toolbar>.toolbar button:hover,
+div.code-toolbar>.toolbar button:focus,
+div.code-toolbar>.toolbar span:hover,
+div.code-toolbar>.toolbar span:focus {
   color: inherit;
   text-decoration: none;
 }
 
 
-#btn-div-wrapper{
-  display:inline;
- border: 2px dashed #444;
+#btn-div-wrapper {
+  display: inline;
+  border: 2px dashed #444;
   height: 125px;
   text-align: justify;
   -ms-text-justify: distribute-all-lines;
@@ -665,17 +711,17 @@ div.code-toolbar > .toolbar span:focus {
   min-width: 612px;
 }
 
-#redirect-btn-div{
+#redirect-btn-div {
   background: linear-gradient(to bottom right, #30273a, #8d78a5);
   padding: 5px;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
   resize: none;
-  border:1px solid #30273a;
+  border: 1px solid #30273a;
   box-shadow: 0 0 10px #8d78a5;
   border-radius: 15px 15px 15px 15px;
- display:inline;
+  display: inline;
   justify-content: space-around;
 }
 
@@ -686,24 +732,28 @@ div.code-toolbar > .toolbar span:focus {
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/crimsontext/v11/wlpogwHKFkZgtmSR3NB0oRJfajhRK_M.ttf) format('truetype');
 }
+
 @font-face {
   font-family: 'Crimson Text';
   font-style: normal;
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/crimsontext/v11/wlp2gwHKFkZgtmSR3NB0oRJfbwhW.ttf) format('truetype');
 }
+
 @font-face {
   font-family: 'Crimson Text';
   font-style: normal;
   font-weight: 600;
   src: url(https://fonts.gstatic.com/s/crimsontext/v11/wlppgwHKFkZgtmSR3NB0oRJXsCxGDNNV.ttf) format('truetype');
 }
+
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459Wlhzg.ttf) format('truetype');
 }
+
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
